# GuideBot

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
src/bishkek_food_finder/: agent.py  bot.py  config.py  database.py  db.py  log.py  models.py  setup_city.py
src/bishkek_food_finder/agent/: __init__.py  __main__.py  core.py  prompt.txt  tools.py
src/bishkek_food_finder/indexer/: embeddings.py  trust.py
src/bishkek_food_finder/scraper/: config.py  db.py  http_client.py  parsers.py  restaurants.py  reviews.py
src/bishkek_food_finder/search/: pipeline.py
