[project]
name = "bishkek-food-finder"
version = "0.1.0"
description = "Telegram bot for finding restaurants in Bishkek with fake review detection"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Danny", email = "danberdov@gmail.com" }
]

dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "tqdm>=4.66.0",
    "httpx>=0.28.1",
    "undetected-chromedriver>=3.5.5",
    "selenium>=4.36.0",
]

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"
